# analog-simulator

./: CMakeLists.txt  README.md
includes/: Circuit.h  Component.h
includes/components/: Resistor.h
src/: Circuit.cpp  Component.cpp  Main.cpp  MainWindow.cpp
src/components/: Resistor.cpp
